tests/error/errors_on_usage/var_undefined_before_modifier1.py
from guppylang import guppy
from guppylang.std.builtins import power

@guppy
def main() -> None:
    x = i
    with power(3):
        i = 3
    u = i
                
main.check()
