tests/error/errors_on_usage/var_undefined_before_modifier1.err
Error: Variable not defined (at $FILE:6:8)
  | 
4 | @guppy
5 | def main() -> None:
6 |     x = i
  |         ^ `i` is not defined

Guppy compilation failed due to 1 previous error
